Fixed bug #47704 (PHP crashes on some "bad" operations with string offsets)